[package]
name = "architect"
version = "0.1.0"
authors = ["Hayden Hughes <hayden@vulpes.chickenkiller.com>"]
description = "Automated Debian package building for git repos."
edition = "2018"
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
depends = "build-essential, devscripts, equivs, git"

[dependencies]
clap = "2.33.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.11.0"
