[package]
name = "backstab"
version = "0.2.0"
authors = ["Hayden Hughes <hayden@vulpes.chickenkiller.com>"]
description = "Automated Debian package porting from ppa repos."
edition = "2018"
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
depends = "build-essential, devscripts, equivs, apt, sudo"

[dependencies]
clap = "2.33.0"
toml = "0.5.6"
apt-cache = "0.1.3"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
